--- a/第一次作业.md
+++ b/第一次作业.md
@@ -60,7 +60,7 @@
 
 > 题目 => 社团的 wifi 密码是什么 ---- 	xbc2333 
 >
-> 答案 => 
+> 答案 => 1234567890 ---- 宣斌超
 
 > 题目 => 请告诉我 Linux 之父的 github 地址是什么 ---- xiangjiu13 
 >
